--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -16,6 +16,42 @@
 	max-width: 100px;
   }
 
+  > li {
+	padding: 0 0 .15rem;
+
+	&#menu_overview,
+	&#menu_preferences,
+	&#menu_logout {
+	  padding: 0 .5rem .15rem;
+	}
+
+	&#menu_overview {
+	  margin-bottom: .5rem;
+	}
+
+	&.menu_grp {
+	  margin: 0;
+	  padding: 0;
+
+	  > span {
+		display: block;
+		padding: .25rem .5rem;
+		background: #19222b;
+		font-size: $text-small;
+		font-weight: bold;
+		text-transform: uppercase;
+		border-bottom: 1px solid transparent;
+		border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
+		border-image-slice: 1;
+	  }
+	}
+
+	> ul {
+	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25);
+	  padding: .25rem 0 1rem;
+	}
+  }
+
   li {
 	padding: 0 .5rem .15rem;
 
@@ -34,20 +70,6 @@
 	}
   }
 
-  > li {
-	padding: 0 0 .15rem;
-
-	&#menu_overview,
-	&#menu_preferences,
-	&#menu_logout {
-	  padding: 0 .5rem .15rem;
-	}
-
-	&:nth-child(n+3) {
-	  margin-top: .25rem;
-	}
-  }
-
   #menu_time {
 	margin-top: 2rem;
 	font-size: $text-small;
@@ -62,19 +84,6 @@
 
 #tnav {
   border: none;
-}
-
-.menu_grp > span {
-  display: block;
-  margin-bottom: .25rem;
-  padding: .25rem .5rem;
-  background: #19222b;
-  font-size: $text-small;
-  font-weight: bold;
-  text-transform: uppercase;
-  border-bottom: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
-  border-image-slice: 1;
 }
 
 #alliance_menu {
