--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -5,7 +5,7 @@
   padding-top: 38px;
   display: flex;
   flex-flow: row wrap;
-  align-content: center;
+  align-content: flex-end;
   justify-content: space-around;
   background: $color-secondary;
   margin: 0;
@@ -33,13 +33,15 @@
   > div {
 	width: 50%;
 	max-width: 245px;
-	padding: 0 .25rem;
+	padding: 0 2.25rem;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
 	margin: 0 0 .5rem;
 
 	&:last-of-type:nth-of-type(even) {
+	  max-width: unset;
+	  width: 100%;
 	  border-top: 1px solid transparent;
 	  margin-top: .75rem;
 	  padding-top: 4px;
@@ -49,8 +51,16 @@
 	  align-items: baseline;
 
 	  span {
-		max-width: 50px;
+		max-width: 33px;
 	  }
+	}
+
+	&:last-of-type:nth-of-type(odd) {
+	  margin-bottom: .75rem;
+	}
+
+	span {
+	  flex-basis: 50%;
 	}
   }
 
@@ -129,10 +139,6 @@
 	}
   }
 
-  span {
-	flex-basis: 40%;
-  }
-
   .textlabel {
 	margin-left: 0;
 	font-size: $text-small;
@@ -166,6 +172,10 @@
 	  letter-spacing: 2px;
 	  text-shadow: 1px 1px 3px black;
 	  white-space: nowrap;
+
+	  &:after {
+		display: none;
+	  }
 	}
 
 	.ter,
@@ -303,9 +313,18 @@
 	text-transform: uppercase;
 	color: #bbb;
 	font-weight: bold;
-	padding: 0 .5rem;
+	padding: 0 .5rem 0 0;
 	flex-basis: 8rem;
   }
+}
+
+#planet_summary .countdown,
+#planet_summary_construction_current,
+#planet_summary_research_current,
+#planet_summary_production_current,
+#planet_summary_construction_complete,
+#planet_summary_research_complete {
+  padding-right: 0;
 }
 
 #planet_summary_header,
@@ -317,7 +336,7 @@
 #planet_summary_research,
 #planet_summary_production {
   margin: .5rem 0;
-  padding: 0;
+  padding: 0 1rem;
   display: flex;
   align-items: center;
   flex-flow: row wrap;
@@ -340,7 +359,7 @@
 #planet_summary_construction_complete,
 #planet_summary_research_complete,
 .planet_summary_production_orders {
-  margin: 0 .5rem 0 8rem;
+  margin: 0 0 0 8rem;
   padding: 0;
   text-align: left;
   width: 100%;
@@ -350,6 +369,44 @@
 	padding: 0 .25rem 0 0;
 	text-align: right;
 	flex: 1;
+  }
+}
+
+.planet_summary_production_orders {
+  .planet_summary_production_complete {
+	position: relative;
+  }
+
+  div.tooltip {
+	position: absolute;
+	min-width: 110px;
+	top: 0 !important;
+	left: 100% !important;
+
+	.planet_summary_production_shipname,
+	.planet_summary_production_shipcount {
+	  width: unset;
+	}
+
+	.planet_summary_production_shipname {
+	  float: left !important;
+	  padding-right: .5rem;
+	}
+
+	.planet_summary_production_shipcount {
+	  float: right !important;
+	}
+
+	br {
+	  display: block;
+	  height: 1rem;
+	  content: " ";
+	  margin-bottom: .25rem;
+
+	  &:last-of-type {
+		margin-bottom: 0;
+	  }
+	}
   }
 }
 
