--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -49,6 +49,12 @@
 	> ul {
 	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25);
 	  padding: .25rem 0 1rem;
+
+	  > li {
+		> ul {
+		  margin-left: .5rem;
+		}
+	  }
 	}
   }
 
@@ -57,14 +63,20 @@
 
 	li {
 	  li {
+		padding: 0;
+
 		&:before {
 		  content: "\279f";
-		  font-size: 2rem;
-		  line-height: .9rem;
+		  font-size: 1.5rem;
+		  line-height: 1.5rem;
 		  vertical-align: middle;
 		  left: -5px;
 		  position: relative;
 		  color: rgba($color-primary, .5);
+		}
+
+		a {
+		  line-height: 1.5rem;
 		}
 	  }
 	}
