--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -5,6 +5,7 @@
 	  margin: 1rem 0 0;
 	}
   }
+
   input[type="submit"] {
 	margin: 0;
   }
@@ -42,7 +43,7 @@ input[type="radio"] {
 
 option {
   font-family: $font-default;
-  background: rgba($color-secondary, .4);
+  background: $color-background !important;
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   color: $color-text;
@@ -58,7 +59,6 @@ input[type="password"] {
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
 }
-
 
 input[type="checkbox"] {
   position: relative;
