--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -62,7 +62,7 @@
 	tr {
 	  &:nth-child(7) th {
 		text-align: right;
-		padding: .5rem 0;
+		padding: .25rem 1rem;
 		font-weight: normal;
 	  }
 
@@ -116,8 +116,9 @@
 		  input {
 			&#total {
 			  background: transparent;
-			  padding: 0 !important;
-			  height: 12px;
+			  height: unset;
+			  border: none;
+			  box-shadow: none;
 			}
 		  }
 		}
