--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -33,7 +33,6 @@
   display: none;
 }
 
-
 #tnav_links {
   display: flex;
 }
@@ -58,7 +57,6 @@
 	margin: 0 auto 1rem;
   }
 }
-
 
 #page_login {
   #header,
@@ -89,6 +87,7 @@
 	  background: $color-secondary;
 	  border-radius: .5rem;
 	  border: 1px solid rgba($color-primary, .5);
+	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, .25), 1px 8px 30px 3px rgba(0, 0, 0, .3);
 
 	  p:last-child {
 		display: none;
@@ -97,9 +96,7 @@
   }
 
   .container {
-	box-shadow: 0 1px 5px rgba(255, 255, 255, .12);
 	border-radius: .5rem;
-	overflow: hidden;
 
 	.header:first-child {
 	  margin-top: 0;
@@ -128,7 +125,6 @@
 	}
   }
 }
-
 
 #page_support ~ div[id^="pabox"],
 #page_manual ~ div[id^="pabox"],
