--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -164,7 +164,8 @@
 	text-indent: unset;
 	position: absolute;
 	top: -35px;
-	left: -175px;
+	left: 0;
+	padding: 0;
 
 	span.textlabel {
 	  flex-basis: 100%;
