--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -10,7 +10,7 @@
   @include respond-below(sm) {
 	grid-row: 3/3;
 	grid-column: 2 / 2;
-	max-width: calc(100vw - 114px);
+	max-width: calc(100vw - 8.14rem);
   }
 }
 
@@ -23,12 +23,6 @@
 .container {
   padding: 0;
 }
-
-//div#contents_information {
-//  position: absolute;
-//  right: 0px;
-//  margin-top: 3px;
-//}
 
 #manual_info {
   display: inline-block;
