--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -8,8 +8,9 @@
 #menu {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  padding: .5rem 0 1rem;
-  background: $color-secondary;
+  padding: 0 0 1rem;
+  background: $color-background;
+  display: table;
   @include respond-below(sm) {
 	grid-column: 1 / 2;
 	grid-row: 1/4;
@@ -25,8 +26,29 @@
 	  padding: 0 .5rem .15rem;
 	}
 
+	&#menu_preferences,
+	&#menu_logout {
+	  text-align: center;
+	  font-size: $text-small;
+	  float: left !important;
+	  width: 50%;
+	  margin: 1rem 0;
+	}
+
+	&#menu_view_link {
+	  margin-bottom: 0;
+	  font-size: $text-small;
+	}
+
 	&#menu_overview {
-	  margin-bottom: .5rem;
+	  padding: .5rem;
+	  width: 100%;
+	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 3px 0 6px -3px rgba(0, 0, 0, 0.25);
+	}
+
+	&#menu_overview,
+	&.menu_grp {
+	  background: $color-secondary;
 	}
 
 	&.menu_grp {
@@ -47,8 +69,8 @@
 	}
 
 	> ul {
-	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25);
-	  padding: .25rem 0 1rem;
+	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 3px 0 6px -3px rgba(0, 0, 0, 0.25);
+	  padding: .25rem 0 .5rem;
 
 	  > li {
 		> ul {
@@ -84,7 +106,20 @@
 
   #menu_time {
 	margin-top: 2rem;
-	font-size: $text-small;
+	font-size: 0;
+	color: rgba($color-primary, .55);
+
+	span {
+	  &#time {
+		font-size: $text-huge;
+		color: $color-text;
+	  }
+
+	  &#time_loaded {
+		font-size: $text-medium;
+		color: rgba($color-text, .5);
+	  }
+	}
   }
 }
 
