--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -44,6 +44,15 @@
 	  padding: .5rem;
 	  width: 100%;
 	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 3px 0 6px -3px rgba(0, 0, 0, 0.25);
+	  border-top: 1px solid transparent;
+	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
+	  border-image-slice: 1;
+	}
+
+	&#menu_help {
+	  border-bottom: 1px solid transparent;
+	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
+	  border-image-slice: 1;
 	}
 
 	&#menu_overview,
