--- a/scss/components/_alliance_members.scss
+++ b/scss/components/_alliance_members.scss
@@ -11,12 +11,20 @@
 	  &:nth-child(odd) {
 		td {
 		  background-color: $color-secondary-alt;
+
+		  &:empty {
+			background: transparent;
+		  }
 		}
 	  }
 
 	  &:nth-child(even) {
 		td {
 		  background-color: $color-secondary;
+
+		  &:empty {
+			background: transparent;
+		  }
 		}
 	  }
 	}
