--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -23,8 +23,6 @@ a,
 	height: 1px;
 	margin: 5px 0 0;
 	transition: all 0.5s ease-in-out;
-	//opacity: 0;
-	background-color: $color-primary;
   }
 
   &:before,
@@ -38,7 +36,7 @@ a,
 
 	&:before,
 	&:after {
-	  background-color: $color-text;
+	  background: linear-gradient(to right, $color-primary 0%, transparent 100%);
 	  width: 100%;
 	  opacity: 1;
 	}
@@ -138,7 +136,14 @@ input[type="submit"] {
 				&:before,
 				&:after {
 				  width: 50%;
-				  background-color: $color-text;
+				}
+
+				&:before {
+				  background: linear-gradient(to right, $color-primary 25%, transparent 100%);
+				}
+
+				&:after {
+				  background: linear-gradient(to left, $color-primary 25%, transparent 100%);
 				}
 			  }
 
@@ -150,9 +155,8 @@ input[type="submit"] {
 				width: 0;
 				height: 1px;
 				margin: 5px 0 0;
+				background: transparent;
 				transition: all 0.3s ease-in-out;
-				//opacity: 0;
-				background-color: $color-primary;
 			  }
 
 			  &:before {
@@ -169,9 +173,16 @@ input[type="submit"] {
 
 				&:before,
 				&:after {
-				  background-color: $color-text;
 				  width: 50%;
 				  opacity: 1;
+				}
+
+				&:before {
+				  background: linear-gradient(to right, $color-primary 25%, transparent 100%);
+				}
+
+				&:after {
+				  background: linear-gradient(to left, $color-primary 25%, transparent 100%);
 				}
 			  }
 			}
