--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -408,12 +408,12 @@
 		}
 	  }
 
-	  th,
-	  td {
-		&:empty {
-		  background: $color-background;
-		}
-	  }
+	  //th,
+	  //td {
+		//&:empty {
+		//  background: $color-background;
+		//}
+	  //}
 	}
   }
 
