--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -61,7 +61,6 @@
 
 /*!
 *
-*  If you can see this and the message at the start then you successfully copied and pasted all the way to the end of the file, epic.
 *
 *  Here's some tips:
 *
@@ -80,4 +79,6 @@
 *  Make sure you are not viewing mobile in SIMPLE view or it will look really shit. Hit the 'view pages in full version button (change this at the bottom left of the side menu).
 *
 *  Have fun / enjoy / leave suggestions and feedback - let's make this awesome together!
+*
+*  P.S. If you can see this and the message at the start then you successfully copied and pasted the entire file, epic.
 */
