--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,9 +6,26 @@
 * Ultimate <3
 *
 * For any questions / bug reports / assistance, contact @UltimateNewbie on TG.
+*  Thanks to Leshy for the original inspiration and CSS grid layout, forever grateful!
 *
+*  Here's some tips:
 *
+*  INSTALL INSTRUCTIONS:
+*  You'll need to enable the 'Round 32' as the base skin in preferences, and a browser extension to add the new CSS to the PA pages:
+*  Chrome or other chromium based browsers (Brave, Opera, Yandex beta, etc.. pretty much any non-FireFox browser): (https://chrome.google.com/webstore/detail/user-javascript-and-css/nbhcbdghjpllgmfilhnhkllmkecfmpld)
+*  FireFox: (https://addons.mozilla.org/en-GB/firefox/addon/custom-style-script/)
 *
+*  This Dark skin CSS can always be refreshed for new updates etc it's found here:
+*  https://raw.githubusercontent.com/FreshLondon/PA-dark/master/dist/styles.css
+*
+*  MOBILE USE:
+*  Any chromium based browser (yandex beta, brave, opera, tec) or FireFox (probably use this as that annoying PA calc import bug isn't present) supports addons, use the chrome extension above for any non-Firefox browser.
+*
+*  IF IT'S FUCKED:
+*  Make sure you are not viewing mobile in SIMPLE view or it will look really shit.
+*  Hit the 'view pages in full version button (change this at the bottom left of the side menu).
+*
+*  Have fun / enjoy / leave suggestions and feedback - let's make this awesome together!
 *
 */
 
@@ -60,25 +77,6 @@
 @import "lib/animations";
 
 /*!
-*
-*
-*  Here's some tips:
-*
-*  INSTALL INSTRUCTIONS:
-*  You'll need to enable the 'Round 32' as the base skin in preferences, and a browser extension to add the new CSS to the PA pages:
-*  Chrome or other chromium based browsers (Brave, Opera, Yanxed beta, etc.. pretty much any non-FireFox browser): (https://chrome.google.com/webstore/detail/user-javascript-and-css/nbhcbdghjpllgmfilhnhkllmkecfmpld)
-*  FireFox: (https://addons.mozilla.org/en-GB/firefox/addon/custom-style-script/)
-*
-*  This Dark skin CSS can alweays be refreshed for new updates etc it's found here:
-*  https://raw.githubusercontent.com/FreshLondon/PA-dark/master/dist/styles.css
-*
-*  MOBILE USE:
-*  Any chromium based browser (yandex beta, brave, opera, tec) or FireFox (probably use this as that annoying PA calc import bug isn't present) supports addons, use the chrome extension above for any non-Firefox browser.
-*
-*  IF IT'S FUCKED:
-*  Make sure you are not viewing mobile in SIMPLE view or it will look really shit. Hit the 'view pages in full version button (change this at the bottom left of the side menu).
-*
-*  Have fun / enjoy / leave suggestions and feedback - let's make this awesome together!
 *
 *  P.S. If you can see this and the message at the start then you successfully copied and pasted the entire file, epic.
 */
