--- a/scss/components/_covert_ops.scss
+++ b/scss/components/_covert_ops.scss
@@ -15,19 +15,6 @@
 	  td {
 		font-weight: bold;
 	  }
-
-	  a {
-		display: inline-block;
-		padding: .25rem 1rem;
-		color: $color-primary;
-
-		&:hover {
-		  color: black;
-		  background: $color-primary;
-		  //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-		  text-decoration: none;
-		}
-	  }
 	}
   }
 
@@ -36,7 +23,6 @@
 	  &:nth-last-child(4) {
 		.maintext {
 		  > table {
-			border: 1px solid rgba($color-primary, .3);
 
 			tr {
 			  &:nth-child(1),
@@ -154,7 +140,7 @@
 	display: block;
 	padding: .25rem .5rem;
 	margin-bottom: .5rem;
-	background: $color-secondary;
+	background: $color-bg-th;
 	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
 	font-size: 1rem;
   }
@@ -227,8 +213,11 @@
 
 #agents_training,
 #guards_training {
-  border: 1px solid rgba($color-primary, .5);
-  background: $color-secondary-alt;
+  border: 1px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+  border-image-slice: 1;
+  box-shadow: inset 0 0 8px 2px rgba(black, .25), 0 0 3px 3px rgba(black, .15);
+  background: $color-secondary;
   padding: 0 0 1rem;
 }
 
