--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -127,7 +127,7 @@
 
 	  div#currentMoves {
 		max-width: 600px;
-		margin: 0 auto;
+		margin: 0 auto .5rem;
 		text-align: center;
 		line-height: 2;
 
