--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -5,7 +5,7 @@
   padding-top: 38px;
   display: flex;
   flex-flow: row wrap;
-  align-content: flex-end;
+  align-content: space-between;
   justify-content: space-around;
   background: $color-secondary;
   margin: 0;
