--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,7 +25,7 @@
 *
 *  IF IT'S FUCKED:
 *  Make sure you are not viewing mobile in SIMPLE view or it will look really shit.
-*  Hit the 'view pages in full version button (change this at the bottom left of the side menu).
+*  Hit the 'view pages in full version' button (change this at the bottom left of the side menu).
 *
 *  Have fun / enjoy / leave suggestions and feedback - let's make this awesome together!
 *
