--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -74,6 +74,10 @@
   box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 0 0 3px 3px rgba(0, 0, 0, 0.15);
   background: $color-secondary;
 
+  &:first-of-type {
+	margin-top: 1rem;
+  }
+
   .construction_info {
 	flex-basis: 100%;
 	display: flex;
