--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -75,6 +75,7 @@
 @import "components/forms";
 @import "components/buttons_links";
 @import "components/tables";
+@import "components/mobile";
 //
 @import "lib/animations";
 
