--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -24,7 +24,7 @@
 		  }
 
 		  //&[style="width: 22%;"] {
-			//display: none;
+		  //display: none;
 		  //}
 		}
 
@@ -155,31 +155,39 @@
 }
 
 .progress_wrapper {
-  background-color: $color-black-light;
-  color: $color-text;
+  color: $color-primary !important;
+  background: rgba($color-secondary, .4) !important;
+  border: 1px solid rgba($color-primary, .5) !important;
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
   font-size: $text-small;
   height: 1.5rem;
   width: 100px;
-}
-
-.progress_bar {
-  height: 1.5rem;
-  background: $color-progress-completed;
-  //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-}
-
-.progress_expected {
-  background: rgba(237, 255, 0, .4);
-  height: 100%;
-  margin-top: -1.5rem;
-  background-size: 100%;
-}
-
-.progress_value {
-  margin-top: -1.3rem;
-  color: white;
+  border-radius: 4px;
+  overflow: hidden;
   position: relative;
-  text-shadow: 0px 1px 1px black;
+
+  .progress_bar {
+	height: 1.5rem;
+	background: $color-progress-completed;
+	//background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+  }
+
+  .progress_expected {
+	background: rgba(237, 255, 0, .4);
+	height: 100%;
+	margin-top: -1.5rem;
+	background-size: 100%;
+  }
+
+  .progress_value {
+	color: $color-text;
+	font-size: $text-default;
+	text-shadow: 0 1px 1px black;
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+  }
 }
 
 .info_header {
