--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -83,6 +83,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
+	order: 1;
 
 	.title,
 	.description {
@@ -116,7 +117,7 @@
 		width: 100%;
 		display: flex;
 		font-size: $text-small;
-		padding: 1rem 2rem;
+		padding: 1rem 50% 1rem 2rem;
 		background: $color-secondary-alt;
 	  }
 	}
@@ -139,21 +140,24 @@
   }
 
   .construction_built {
-	padding: 1rem 2rem;
+	padding: 0 2rem;
+	margin-top: -2.1rem;
 	font-size: 1rem;
 	width: 206px;
-	text-align: left;
+	text-align: right;
+	z-index: 10;
+	order: 3;
 
 	.textvalue {
 	  font-weight: bold;
 	}
 
 	.progress_wrapper {
-	  margin: 1rem 0;
+	  margin: 1.8rem 0 1rem;
 
 	  .progress_value {
 		margin-top: -1.45rem;
-		font-size: 1rem;
+		font-size: $text-default;
 	  }
 
 	  .progress_expected {
@@ -165,22 +169,29 @@
 
 	  + p {
 		font-size: $text-default;
-		padding: 0;
 		text-align: left;
+		padding: 0 0 1rem;
 	  }
+	}
+
+	br {
+	  content: " ";
+	  margin-top: .5rem;
+	  display: block;
 	}
   }
 
   .construction_build {
 	display: flex;
-	justify-content: space-between;
 	align-items: flex-start;
-	padding: 1rem 2rem 1rem 0;
 	flex-wrap: wrap;
 	width: calc(100% - 206px) !important;
+	order: 2;
+	padding-left: 2rem;
 
 	.resources {
-	  margin-bottom: 1rem;
+	  padding: .5rem 0 .7rem;
+	  margin-bottom: 0;
 	  text-align: left;
 	  order: 40;
 	  width: 100%;
@@ -190,7 +201,7 @@
 	  }
 
 	  &:nth-child(3) {
-		margin-bottom: 0;
+		margin-bottom: 1rem;
 	  }
 
 	  li {
@@ -204,6 +215,7 @@
 	  align-items: center;
 	  justify-content: flex-start;
 	  order: 10;
+	  padding-top: 1rem;
 
 	  &:nth-child(4) {
 		order: 30;
@@ -211,6 +223,7 @@
 
 	  &.queueform {
 		order: 30;
+		padding-bottom: 1rem;
 
 		&:last-child {
 		  input {
@@ -223,7 +236,7 @@
 
 	  input {
 		&[type="checkbox"] {
-		  margin: -0.3rem 0 0 0.5rem;
+		  margin: 0 0 0 .5rem;
 		  width: 1.5rem;
 		  height: 1.5rem;
 
@@ -261,6 +274,10 @@
 
 		  &:hover {
 			background: $color-negative;
+		  }
+
+		  &.con_btn {
+			margin: 0 !important;
 		  }
 		}
 	  }
@@ -459,11 +476,19 @@
   #show_scan {
 	table {
 	  width: auto;
-	  min-width: 400px;
+	  min-width: unset;
 
 	  tr {
+		th,
 		td {
-		  padding: .25rem .75rem;
+		  padding: .25rem 1rem !important;
+
+		  &:empty {
+			display: none;
+		  }
+		}
+
+		td {
 
 		  &[colspan="2"] {
 			background: $color-background;
