--- a/scss/components/_tables.scss
+++ b/scss/components/_tables.scss
@@ -42,7 +42,8 @@ table {
 
 #page_scan div#full_page .maintext >,
 #view_news > .maintext > table > tbody > tr,
-form[name="gal_fund_trade"] + p + p + {
+form[name="gal_fund_trade"] + p + p +,
+#page_overview #fleet_overview {
   table {
 	border: 1px solid transparent;
 	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
