--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -1,9 +1,5 @@
 /* RESEARCH, CONSTRUCTION & WAVES
    -------------------------------------------------------*/
-.research {
-  border: 0;
-  text-align: center;
-}
 
 .branch_name h3,
 .construction_info .title,
@@ -29,8 +25,7 @@
 }
 
 .construction_info,
-.scans,
-.research {
+.scans {
   p {
 	position: relative;
 	padding-left: 1.5rem;
@@ -293,21 +288,62 @@
   }
 }
 
+#research {
+  > .maintext {
+	> p {
+	  margin-bottom: 1rem;
+	}
+  }
+}
+
 .research {
-  p .desc_link {
-	top: -55px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  width: 100%;
+  max-width: 450px;
+  margin: 0 auto 3rem;
+  border: 1px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+  border-image-slice: 1;
+  box-shadow: inset 0 0 8px 2px rgba(black, .25), 0 2px 10px 2px rgba(black, .15);
+  background: $color-secondary;
+
+  .superhighlight {
+	font-size: $text-large;
+  }
+
+  p {
+	padding-right: 0;
+	text-align: center;
+
+	.desc_link {
+	  position: relative;
+	  top: unset;
+	  right: unset;
+	  clear: both;
+	  display: block;
+	  margin-top: .5rem;
+	}
   }
 
   .branch_name {
+	width: 100%;
+
 	h3 {
-	  text-align: left;
+	  background: $color-bg-th;
+	  padding: .5rem 2rem;
+	  text-align: center;
+	  margin: 0;
 	}
   }
 
   .research_current,
   .research_next {
-	text-align: left;
-	padding-left: .5rem !important;
+	text-align: center;
+	padding: 1rem 2rem;
+	width: 100% !important;
 
 	.time,
 	.rp {
@@ -317,22 +353,21 @@
 
   .research_next {
 	font-style: italic;
+	border-top: 1px solid rgba(82, 165, 248, 0.5);
 
 	&[id] {
 	  position: relative;
 	  font-style: normal;
-	  border-top: 1px solid rgba($color-primary, .5);
-	  margin: .5rem auto 0;
-	  padding: 1rem 0 0;
 	  display: flex;
 	  flex-direction: column;
 
 	  .title {
 		order: 1;
+		text-align: center;
 	  }
 
 	  .progress_wrapper {
-		margin: 10px 0 0;
+		margin: 0 auto;
 		order: 3;
 	  }
 
@@ -344,6 +379,7 @@
 
 		&:first-of-type {
 		  order: 2;
+		  text-align: center;
 		}
 
 		&.research_queue {
@@ -353,6 +389,7 @@
 		&:last-of-type {
 		  order: 6;
 		  padding-bottom: 10px;
+		  text-align: center;
 		}
 	  }
 
@@ -363,6 +400,12 @@
 		  input[type="submit"] {
 			margin-top: 0;
 		  }
+
+		  + p.research_queue {
+			border-top: 1px solid rgba($color-primary, .5);
+			margin-top: 1rem;
+			padding-top: 1.5rem !important;
+		  }
 		}
 
 		&.queueform,
@@ -372,6 +415,15 @@
 
 		input[type="submit"] {
 		  width: 200px;
+		  margin: 0 !important;
+		}
+
+		p {
+		  input[type="submit"] {
+			&:first-child {
+			  margin-top: .5rem !important;
+			}
+		  }
 		}
 	  }
 
@@ -392,38 +444,47 @@
 }
 
 .research_branch {
-  max-width: 700px;
-  margin: 0 auto;
+  max-width: 375px;
+  margin: -1rem auto 3rem;
 
   .completed {
 	.title {
 	  position: relative;
 	  background: none;
 	  margin: 0 auto;
+	  background: $color-bg-th;
+	  padding: .5rem 2rem;
+	  color: $color-text;
 
 	  &:after {
 		content: '\2714';
 		color: $color-primary;
 		position: absolute;
-		top: 0;
+		top: 50%;
 		right: 0;
+		transform: translate(-50%, -50%);
 	  }
 	}
   }
 }
 
 .research_branch_list {
-  padding: .25rem .5rem;
+  padding: 0;
   background: $color-secondary;
   border: 0;
-  margin: .25rem auto;
+  margin: 0 auto 1rem;
   text-align: center;
   font-style: normal;
+
+  &:last-child {
+	margin-bottom: 0;
+  }
 
   p {
 	position: relative;
 	text-align: center !important;
 	width: 100%;
+	padding: .5rem 2rem;
 
 	a.desc_link {
 	  display: block;
