--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -104,7 +104,8 @@ ul.alliance_attack_claims_list a,
 #page_alliance_attacks .container#javascriptwarning + .container + .container + .container table tr:not([class]):not([id]) a,
 #page_alliance_attacks .container#javascriptwarning + #notice + .container + .container table tr a,
 #page_alliance_attacks .container#javascriptwarning + #notice + .container + .container + .container table tr:not([class]):not([id]) a,
-#page_alliance_fleets #contents table tr td[style="width: 20%;"] a {
+#page_alliance_fleets #contents table tr td[style="width: 20%;"] a,
+#page_alliance_defence #dships_box p#dbcalc a {
   display: inline-block;
   height: 1.5rem;
   margin: 1rem 0;
