--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -18,7 +18,7 @@
 		margin: 0 0 2rem 5px;
 		background: $color-secondary;
 		border: 1px solid rgba($color-primary, .18);
-		box-shadow: 0px 1px 2px 1px rgba(black, 0.3);
+		box-shadow: inset 0 0 8px 2px rgba(black, .25), 0 2px 10px 2px rgba(black, .15);
 
 		.ally_def_target {
 		  font-size: 1rem;
