css - notice margins

--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -111,6 +111,7 @@ h2 {
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
   border-image-slice: 1;
+  margin-bottom: 1rem;
 
   .header,
   .footer {
