--- a/scss/components/_galaxy.scss
+++ b/scss/components/_galaxy.scss
@@ -17,8 +17,17 @@
 	  color: $color-primary;
 	}
   }
+
   table {
 	width: 100% !important;
+
+	&#galtable {
+	  thead {
+		th {
+		  width: auto !important;
+		}
+	  }
+	}
   }
 
   .tablesort {
