--- a/scss/components/_tables.scss
+++ b/scss/components/_tables.scss
@@ -30,7 +30,6 @@ table {
 #page_covert #contents .container:nth-last-child(4) .maintext >,
 #page_population #tab1 .container:nth-last-child(2),
 #page_mining #tab1,
-#page_waves #show_scan,
 #page_alliance_scans #tab1 {
   table:first-of-type {
 	border: 1px solid transparent;
@@ -44,7 +43,8 @@ table {
 #view_news > .maintext > table > tbody > tr,
 form[name="gal_fund_trade"] + p + p +,
 #page_overview #fleet_overview,
-#page_alliance_scans .tabs#tab2 {
+#page_alliance_scans .tabs#tab2,
+#page_waves #show_scan {
   table {
 	border: 1px solid transparent;
 	border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
