--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -60,7 +60,7 @@
   flex-wrap: wrap;
   border: none;
   position: relative;
-  width: 100%;
+  width: 90%;
   max-width: 600px;
   margin: 0 auto 3rem;
   border: 1px solid transparent;
@@ -150,20 +150,9 @@
 	.progress_wrapper {
 	  margin: 1.8rem 0 1rem;
 
-	  .progress_value {
-		margin-top: -1.45rem;
-		font-size: $text-default;
-	  }
-
-	  .progress_expected {
-		background-image: none;
-		background-color: $color-progress-expected;
-		height: 1.5rem;
-		margin-top: -1.5rem;
-	  }
-
 	  + p {
 		font-size: $text-default;
+		line-height: $text-default;
 		text-align: left;
 		padding: 0 0 1rem;
 	  }
@@ -184,23 +173,35 @@
 	order: 2;
 	padding-left: 2rem;
 
+	> * {
+	  &:first-child {
+		padding-top: .5rem !important;
+	  }
+	}
+
 	.resources {
-	  padding: .5rem 0 .7rem;
+	  padding: .5rem 0;
 	  margin-bottom: 0;
 	  text-align: left;
-	  order: 40;
 	  width: 100%;
-
-	  &:first-of-type {
-		order: 20;
-	  }
+	  order: 1;
+	  display: flex;
+	  flex-wrap: wrap;
 
 	  &:nth-child(3) {
-		margin-bottom: 1rem;
+		order: 3;
+		border-top: 1px solid rgba($color-primary, .5);
+		margin-top: .75rem;
+		padding-top: 1rem;
 	  }
 
 	  li {
 		display: inline-block;
+		margin: 0 2rem 0 0;
+
+		&:nth-child(1) {
+		  width: 100%;
+		}
 	  }
 	}
 
@@ -209,24 +210,16 @@
 	  display: flex;
 	  align-items: center;
 	  justify-content: flex-start;
-	  order: 10;
-	  padding-top: 1rem;
+	  margin-bottom: .5rem;
+	  order: 2;
 
-	  &:nth-child(4) {
-		order: 30;
+	  &:nth-child(1) {
+		order: 4;
 	  }
 
-	  &.queueform {
-		order: 30;
-		padding-bottom: 1rem;
-
-		&:last-child {
-		  input {
-			&[type="submit"] {
-			  margin-bottom: 0 !important;;
-			}
-		  }
-		}
+	  &:nth-child(4) {
+		order: 4;
+		margin-bottom: 1rem;
 	  }
 
 	  input {
@@ -301,7 +294,7 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
-  width: 100%;
+  width: 90%;
   max-width: 450px;
   margin: 0 auto 3rem;
   border: 1px solid transparent;
@@ -566,6 +559,94 @@
 
   #tab1 {
 	.maintext {
+
+	  .scans {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		border: none;
+		position: relative;
+		width: 90%;
+		max-width: 450px;
+		margin: 0 auto 3rem;
+		border: 1px solid transparent;
+		border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+		border-image-slice: 1;
+		box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 0 0 3px 3px rgba(0, 0, 0, 0.15);
+		background: $color-secondary-alt;
+
+		.scan_info {
+		  width: 100% !important;
+
+		  .title {
+			background: $color-bg-th;
+			margin-bottom: 0;
+			padding: .5rem 2rem;
+		  }
+
+		  p {
+			background: $color-secondary;
+			padding: 1rem 2rem;
+			text-align: center;
+			box-shadow: inset 0 0 8px 2px rgba(black, .25);
+			border-bottom: 1px solid rgba(black, .25);
+
+			.desc_link {
+			  display: block;
+			  right: unset;
+			  position: relative;
+			  top: unset;
+			  left: unset;
+			  margin-top: .5rem;
+			}
+		  }
+
+		  .resources {
+			position: absolute;
+			top: 0;
+			right: 2rem;
+		  }
+		}
+
+		.scan_action {
+		  padding-top: 1rem;
+
+		  .scan_multi {
+			position: absolute;
+			right: 1rem;
+			bottom: 1rem;
+		  }
+
+		  .scan_fund {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 2rem;
+
+			input {
+			  &[type="checkbox"] {
+				margin: 0 .5rem 0 0;
+			  }
+
+			  &[type="submit"] {
+				margin-top: .5rem !important;
+			  }
+			}
+
+			.textlabel {
+			  font-size: $text-small;
+			}
+		  }
+
+		}
+	  }
+
+	  > form {
+		input[type="checkbox"] {
+		  margin-right: .5rem;
+		}
+	  }
+
 	  form {
 		&:not(#stored_scans_form) {
 		  table {
