--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -42,520 +42,540 @@
 	  }
 	}
   }
-}
 
-#bcalc {
-  > tbody {
-	> tr {
-	  th {
-		&#def,
-		&#att {
-		  vertical-align: top !important;
+  #bcalc {
+	> tbody {
+	  > tr {
+		th {
+		  &#def,
+		  &#att {
+			vertical-align: top !important;
+		  }
+		}
+	  }
+	}
+
+	#controls {
+	  tr {
+		th {
+		  width: auto;
+		  vertical-align: baseline;
+		}
+	  }
+	}
+
+	input,
+	input[type="checkbox"],
+	select {
+	  color: $color-offwhite;
+	  font-size: $text-default;
+	  background-color: rgba($color-secondary, .4);
+	  box-shadow: inset 0px 2px 4px 2px rgba(0, 0, 0, 0.4);
+	  border-radius: 3px;
+	}
+
+	input[type="checkbox"] {
+	  vertical-align: middle;
+	}
+
+	option {
+	  background-color: $color-secondary;
+	}
+
+	th,
+	td {
+	  color: $color-offwhite;
+	  font-size: $text-small;
+	  white-space: nowrap;
+	  background: transparent;
+
+	  &.def_total,
+	  &.att_total {
+		color: $color-offwhite;
+	  }
+
+	  &.def_emped,
+	  &.att_emped {
+		color: $color-emp;
+	  }
+
+	  &.def_killed,
+	  &.att_killed {
+		color: $color-killed;
+	  }
+
+	  &.def_stolen,
+	  &.att_stolen {
+		color: $color-stolen;
+	  }
+	}
+
+	th {
+	  padding: 0;
+
+	  &.att_name,
+	  &.def_name {
+		span {
+		  font-weight: bold;
+		}
+	  }
+	}
+
+	td {
+	  padding: .125rem 0;
+
+	  &.def_value_lost,
+	  &.att_score_lost {
+		color: $color-zikonian;
+	  }
+
+	  &.def_value_gained,
+	  &.att_score_gained {
+		color: $color-positive;
+	  }
+	}
+
+	#def_side {
+	  background: rgba($color-positive, .4);
+	  padding: .25rem;
+	}
+
+	#att_side {
+	  background: rgba($color-negative, .35);
+	  padding: .25rem;
+	}
+
+	#att_add_to,
+	.att_filter,
+	#att_show input[type="checkbox"],
+	#att_table input,
+	#att_table select {
+	  border-color: rgba($color-primary, .5);
+
+	  &:before {
+		color: $color-negative;
+	  }
+	}
+
+	#def_add_to,
+	.def_filter,
+	#def_show input[type="checkbox"],
+	#def_table input,
+	#def_table select {
+	  border-color: rgba($color-primary, .5);
+
+	  &:before {
+		color: $color-positive;
+	  }
+	}
+
+	#def_show {
+	  input[type="checkbox"] {
+		&#def_race_ter {
+		  border-color: $color-terran !important;
+
+		  &:before {
+			color: $color-terran;
+		  }
+		}
+
+		&#def_race_cat {
+		  border-color: $color-cathaar !important;
+
+		  &:before {
+			color: $color-cathaar;
+		  }
+		}
+
+		&#def_race_xan {
+		  border-color: $color-xandathrii !important;
+
+		  &:before {
+			color: $color-xandathrii;
+		  }
+		}
+
+		&#def_race_zik {
+		  border-color: $color-zikonian !important;
+
+		  &:before {
+			color: $color-zikonian;
+		  }
+		}
+
+		&#def_race_etd {
+		  border-color: $color-eitraides !important;
+
+		  &:before {
+			color: $color-eitraides;
+		  }
+		}
+	  }
+	}
+
+	#att_show {
+	  input[type="checkbox"] {
+		&#att_race_ter {
+		  border-color: $color-terran;
+
+		  &:before {
+			color: $color-terran;
+		  }
+		}
+
+		&#att_race_cat {
+		  border-color: $color-cathaar;
+
+		  &:before {
+			color: $color-cathaar;
+		  }
+		}
+
+		&#att_race_xan {
+		  border-color: $color-xandathrii;
+
+		  &:before {
+			color: $color-xandathrii;
+		  }
+		}
+
+		&#att_race_zik {
+		  border-color: $color-zikonian;
+
+		  &:before {
+			color: $color-zikonian;
+		  }
+		}
+
+		&#att_race_etd {
+		  border-color: $color-eitraides;
+
+		  &:before {
+			color: $color-eitraides;
+		  }
+		}
+	  }
+	}
+
+	.global_controls {
+	  padding: 0 .5rem .5rem;
+
+	  &.nowrap {
+		box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15), inset 0 2px 1px 1px rgba($color-primary, .09);
+		background: $color-secondary;
+		border-radius: 4px;
+	  }
+	}
+
+	.def_ter,
+	.att_ter {
+	  background: transparent;
+
+	  th,
+	  td {
+		background-color: rgba($color-terran, .3);
+	  }
+
+	  &:hover {
+		th,
+		td {
+		  background-color: rgba($color-terran, .4);
+		}
+	  }
+	}
+
+	.def_cat,
+	.att_cat {
+	  background: transparent;
+
+	  th,
+	  td {
+		background-color: rgba($color-cathaar, .3);
+	  }
+
+	  &:hover {
+		th,
+		td {
+		  background-color: rgba($color-cathaar, .4);
+		}
+	  }
+	}
+
+	.def_xan,
+	.att_xan {
+	  background: transparent;
+
+	  th,
+	  td {
+		background-color: rgba($color-xandathrii, .3);
+	  }
+
+	  &:hover {
+		th,
+		td {
+		  background-color: rgba($color-xandathrii, .4);
+		}
+	  }
+	}
+
+	.def_zik,
+	.att_zik {
+	  background: transparent;
+
+	  th,
+	  td {
+		background-color: rgba($color-zikonian, .3);
+	  }
+
+	  &:hover {
+		th,
+		td {
+		  background-color: rgba($color-zikonian, .4);
+		}
+	  }
+	}
+
+	.def_etd,
+	.att_etd {
+	  background: transparent;
+
+	  th,
+	  td {
+		background-color: rgba($color-eitraides, .3);
+	  }
+
+	  &:hover {
+		th,
+		td {
+		  background-color: rgba($color-eitraides, .4);
+		}
+	  }
+	}
+
+	.def_ter,
+	.att_ter,
+	.def_cat,
+	.att_cat,
+	.def_xan,
+	.att_xan,
+	.def_zik,
+	.att_zik,
+	.def_etd,
+	.att_etd {
+	  th,
+	  td {
+		box-shadow: inset 0 2px 4px 2px rgba(black, .15);
+		transition: ease all .25s;
+	  }
+	}
+
+	span {
+	  transition: ease all .3s;
+
+	  &[onmouseover] {
+		cursor: crosshair;
+	  }
+	}
+
+	#def_table,
+	#att_table {
+	  tr {
+		&:first-child {
+		  th {
+			background: $color-bg-th;
+		  }
+		}
+
+		td {
+		  input {
+			vertical-align: text-top;
+			height: 1.375rem;
+		  }
+		}
+	  }
+	}
+
+	.def_report_fleet,
+	.def_report_salvage,
+	.att_report_fleet {
+	  tr {
+		&:nth-child(2) {
+		  th {
+			font-weight: bold;
+		  }
+		}
+	  }
+	}
+
+	#att_war + .att_row_sep {
+	  height: 4.35rem;
+	}
+
+	input[id^="att_race"] {
+	  border-color: $color-neutral;
+	}
+
+	#def_header_killed,
+	.def_killed,
+	#def_header_emped,
+	.def_emped,
+	#def_header_stolen,
+	.def_stolen,
+	#att_header_killed,
+	.att_killed,
+	#att_header_emped,
+	.att_emped,
+	#att_header_stolen,
+	.att_stolen,
+	.def_total,
+	.att_total {
+	  width: unset;
+	  min-width: 70px;
+	}
+
+	span.t1 {
+	  color: $color-negative;
+	}
+
+	input.t1:not([value="0"]) {
+	  color: $color-negative;
+	  background-color: rgba($color-secondary-alt, .7) !important;
+	  border-color: rgba($color-negative, .5) !important;
+	}
+
+	span.t2 {
+	  color: $color-neutral;
+	}
+
+	input.t2:not([value="0"]) {
+	  color: $color-neutral;
+	  background-color: rgba($color-secondary-alt, .7) !important;
+	  border-color: rgba($color-neutral, .5) !important;
+	}
+  }
+
+  #def_value_table,
+  #att_score_table {
+	tr {
+	  td {
+		&:last-of-type {
+		  font-size: 1rem;
+		}
+	  }
+
+	  td {
+		&:first-child {
+		  width: 60%;
 		}
 	  }
 	}
   }
 
-  #controls {
-	tr {
-	  th {
-		width: auto;
-		vertical-align: baseline;
-	  }
-	}
-  }
-
-  input,
-  input[type="checkbox"],
-  select {
-	color: $color-offwhite;
-	font-size: $text-default;
-	background-color: rgba($color-secondary, .4);
-	box-shadow: inset 0px 2px 4px 2px rgba(0, 0, 0, 0.4);
-	border-radius: 3px;
-  }
-
-  input[type="checkbox"] {
-	vertical-align: middle;
-  }
-
-  option {
+  #bcalc tr:nth-child(4) .global_controls,
+  #def_table tr:nth-last-child(-n+3),
+  #att_table tr:nth-last-child(-n+5) {
 	background-color: $color-secondary;
   }
 
-  th,
-  td {
-	color: $color-offwhite;
-	font-size: $text-small;
-	white-space: nowrap;
-	background: transparent;
+  #scans_area {
+	background-color: $color-secondary;
+	height: 3rem;
+	display: block !important;
+	padding: .5rem;
+  }
 
-	&.def_total,
-	&.att_total {
+  #my_bcalcs,
+  #add_other,
+  #add_own,
+  #fleet_select_box,
+  #side_select_box {
+	p {
 	  color: $color-offwhite;
 	}
 
-	&.def_emped,
-	&.att_emped {
-	  color: $color-emp;
-	}
+	.right {
+	  padding-right: 0;
 
-	&.def_killed,
-	&.att_killed {
-	  color: $color-killed;
-	}
-
-	&.def_stolen,
-	&.att_stolen {
-	  color: $color-stolen;
-	}
-  }
-
-  th {
-	padding: 0;
-
-	&.att_name,
-	&.def_name {
-	  span {
+	  a {
 		font-weight: bold;
 	  }
 	}
   }
 
-  td {
-	padding: .125rem 0;
+  #add_other {
+	width: 230px !important;
 
-	&.def_value_lost,
-	&.att_score_lost {
-	  color: $color-zikonian;
-	}
+	p {
+	  padding: 0 0 .5rem;
 
-	&.def_value_gained,
-	&.att_score_gained {
-	  color: $color-positive;
-	}
-  }
-
-  #def_side {
-	background: rgba($color-positive, .4);
-	//background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-	color: $color-offwhite;
-	padding-bottom: .25rem;
-  }
-
-  #att_side {
-	background: rgba($color-negative, .35);
-	//background: linear-gradient(170deg, $color-neutral 0%, $color-negative 100%);
-	padding-bottom: .25rem;
-  }
-
-  #att_add_to,
-  .att_filter,
-  #att_show input[type="checkbox"],
-  #att_table input,
-  #att_table select {
-	border-color: rgba($color-primary, .5);
-
-	&:before {
-	  color: $color-negative;
-	}
-  }
-
-  #def_add_to,
-  .def_filter,
-  #def_show input[type="checkbox"],
-  #def_table input,
-  #def_table select {
-	border-color: rgba($color-primary, .5);
-
-	&:before {
-	  color: $color-positive;
-	}
-  }
-
-  #def_show {
-	input[type="checkbox"] {
-	  &#def_race_ter {
-		border-color: $color-terran !important;
-
-		&:before {
-		  color: $color-terran;
-		}
-	  }
-
-	  &#def_race_cat {
-		border-color: $color-cathaar !important;
-
-		&:before {
-		  color: $color-cathaar;
-		}
-	  }
-
-	  &#def_race_xan {
-		border-color: $color-xandathrii !important;
-
-		&:before {
-		  color: $color-xandathrii;
-		}
-	  }
-
-	  &#def_race_zik {
-		border-color: $color-zikonian !important;
-
-		&:before {
-		  color: $color-zikonian;
-		}
-	  }
-
-	  &#def_race_etd {
-		border-color: $color-eitraides !important;
-
-		&:before {
-		  color: $color-eitraides;
-		}
-	  }
-	}
-  }
-
-  #att_show {
-	input[type="checkbox"] {
-	  &#att_race_ter {
-		border-color: $color-terran;
-
-		&:before {
-		  color: $color-terran;
-		}
-	  }
-
-	  &#att_race_cat {
-		border-color: $color-cathaar;
-
-		&:before {
-		  color: $color-cathaar;
-		}
-	  }
-
-	  &#att_race_xan {
-		border-color: $color-xandathrii;
-
-		&:before {
-		  color: $color-xandathrii;
-		}
-	  }
-
-	  &#att_race_zik {
-		border-color: $color-zikonian;
-
-		&:before {
-		  color: $color-zikonian;
-		}
-	  }
-
-	  &#att_race_etd {
-		border-color: $color-eitraides;
-
-		&:before {
-		  color: $color-eitraides;
-		}
-	  }
-	}
-  }
-
-  .global_controls {
-	padding: 0 .5rem .5rem;
-
-	&.nowrap {
-	  box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15), inset 0 2px 1px 1px rgba($color-primary, .09);
-	  background: $color-secondary;
-	  border-radius: 4px;
-	}
-  }
-
-  .def_ter,
-  .att_ter {
-	background: transparent;
-
-	th,
-	td {
-	  background-color: rgba($color-terran, .3);
-	}
-
-	&:hover {
-	  th,
-	  td {
-		background-color: rgba($color-terran, .4);
-	  }
-	}
-  }
-
-  .def_cat,
-  .att_cat {
-	background: transparent;
-
-	th,
-	td {
-	  background-color: rgba($color-cathaar, .3);
-	}
-
-	&:hover {
-	  th,
-	  td {
-		background-color: rgba($color-cathaar, .4);
-	  }
-	}
-  }
-
-  .def_xan,
-  .att_xan {
-	background: transparent;
-
-	th,
-	td {
-	  background-color: rgba($color-xandathrii, .3);
-	}
-
-	&:hover {
-	  th,
-	  td {
-		background-color: rgba($color-xandathrii, .4);
-	  }
-	}
-  }
-
-  .def_zik,
-  .att_zik {
-	background: transparent;
-
-	th,
-	td {
-	  background-color: rgba($color-zikonian, .3);
-	}
-
-	&:hover {
-	  th,
-	  td {
-		background-color: rgba($color-zikonian, .4);
-	  }
-	}
-  }
-
-  .def_etd,
-  .att_etd {
-	background: transparent;
-
-	th,
-	td {
-	  background-color: rgba($color-eitraides, .3);
-	}
-
-	&:hover {
-	  th,
-	  td {
-		background-color: rgba($color-eitraides, .4);
-	  }
-	}
-  }
-
-  .def_ter,
-  .att_ter,
-  .def_cat,
-  .att_cat,
-  .def_xan,
-  .att_xan,
-  .def_zik,
-  .att_zik,
-  .def_etd,
-  .att_etd {
-	th,
-	td {
-	  box-shadow: inset 0 2px 4px 2px rgba(black, .15);
-	  transition: ease all .25s;
-	}
-  }
-
-  span {
-	transition: ease all .3s;
-
-	&[onmouseover] {
-	  cursor: crosshair;
-	}
-  }
-
-  #def_table,
-  #att_table {
-	tr {
 	  &:first-child {
+		height: 1rem;
+	  }
+
+	  #add_other_side_fleet {
+		display: block;
+		margin-top: .75rem;
+	  }
+	}
+
+	input {
+	  &[type="number"] {
+		background-color: rgba($color-secondary, .4);
+		color: $color-text;
+	  }
+
+	  &[type="button"] {
+		margin: .5rem 0;
+	  }
+	}
+  }
+
+  #my_bcalcs a:hover,
+  #add_own a:hover,
+  #add_other a:hover,
+  #fleet_select_box a:hover,
+  #side_select_box a:hover,
+  #add_own th,
+  #con_fleets a:hover {
+	color: $color-text;
+  }
+
+  #add_own {
+	background: $color-background !important;
+	padding: 1px;
+
+	p:first-child {
+	  height: 0;
+	}
+
+	table {
+	  margin-bottom: 0;
+
+	  tr {
+		background: $color-secondary;
+
+		th,
+		td {
+		  font-size: $text-default;
+		}
+
 		th {
+		  font-size: .6875rem;
+		  background: transparent;
+		  padding: 0 0 0 5px;
+		}
+
+		td {
+		  padding-right: 5px;
+		}
+
+		&:first-child {
 		  background: $color-bg-th;
 		}
-	  }
 
-	  td {
-		input {
-		  vertical-align: text-top;
-		  height: 1.375rem;
+		&:nth-child(even) {
+		  background: $color-secondary-alt;
 		}
-	  }
-	}
-  }
-
-  .def_report_fleet,
-  .def_report_salvage,
-  .att_report_fleet {
-	tr {
-	  &:nth-child(2) {
-		th {
-		  font-weight: bold;
-		}
-	  }
-	}
-  }
-
-  #att_war + .att_row_sep {
-	height: 4.35rem;
-  }
-
-  input[id^="att_race"] {
-	border-color: $color-neutral;
-  }
-
-  #def_header_killed,
-  .def_killed,
-  #def_header_emped,
-  .def_emped,
-  #def_header_stolen,
-  .def_stolen,
-  #att_header_killed,
-  .att_killed,
-  #att_header_emped,
-  .att_emped,
-  #att_header_stolen,
-  .att_stolen,
-  .def_total,
-  .att_total {
-	width: unset;
-	min-width: 70px;
-  }
-
-  span.t1 {
-	color: $color-negative;
-  }
-
-  input.t1:not([value="0"]) {
-	color: $color-negative;
-	background-color: rgba($color-secondary-alt, .7) !important;
-	border-color: rgba($color-negative, .5) !important;
-  }
-
-  span.t2 {
-	color: $color-neutral;
-  }
-
-  input.t2:not([value="0"]) {
-	color: $color-neutral;
-	background-color: rgba($color-secondary-alt, .7) !important;
-	border-color: rgba($color-neutral, .5) !important;
-  }
-}
-
-#def_value_table,
-#att_score_table {
-  tr {
-	td {
-	  &:last-of-type {
-		font-size: 1rem;
-	  }
-	}
-
-	td {
-	  &:first-child {
-		width: 60%;
-	  }
-	}
-  }
-}
-
-#bcalc tr:nth-child(4) .global_controls,
-#def_table tr:nth-last-child(-n+3),
-#att_table tr:nth-last-child(-n+5) {
-  background-color: $color-secondary;
-}
-
-#scans_area {
-  background-color: $color-secondary;
-  height: 3rem;
-  display: block !important;
-  padding: .5rem;
-}
-
-#my_bcalcs,
-#add_other,
-#add_own,
-#fleet_select_box,
-#side_select_box {
-  p {
-	color: $color-offwhite;
-  }
-
-  .right {
-	padding-right: 0;
-
-	a {
-	  font-weight: bold;
-	}
-  }
-}
-
-#add_other input[type="number"] {
-  background-color: $color-secondary;
-  color: $color-text;
-}
-
-#my_bcalcs a:hover,
-#add_own a:hover,
-#add_other a:hover,
-#fleet_select_box a:hover,
-#side_select_box a:hover,
-#add_own th,
-#con_fleets a:hover {
-  color: $color-text;
-}
-
-#add_own {
-  background: $color-background !important;
-  padding: 1px;
-
-  p:first-child {
-	height: 0;
-  }
-
-  table {
-	margin-bottom: 0;
-
-	tr {
-	  background: $color-secondary;
-
-	  th,
-	  td {
-		font-size: $text-default;
-	  }
-
-	  th {
-		font-size: .6875rem;
-		background: transparent;
-		padding: 0 0 0 5px;
-	  }
-
-	  td {
-		padding-right: 5px;
-	  }
-
-	  &:first-child {
-		background: $color-bg-th;
-	  }
-
-	  &:nth-child(even) {
-		background: $color-secondary-alt;
 	  }
 	}
   }
