--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -35,10 +35,30 @@ select,
 }
 
 input[type="radio"] {
-  background: rgba($color-secondary, .4);
+  background: rgba($color-secondary, .4) !important;
   border: 1px solid rgba($color-primary, .5);
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
-  vertical-align: -7px;
+  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4) !important;
+  vertical-align: -.5rem;
+  appearance: none;
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  position: relative;
+
+  &:checked {
+	&:after {
+	  position: absolute;
+	  content: "";
+	  height: 1rem;
+	  width: 1rem;
+	  background: $color-primary;
+	  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .5);
+	  border-radius: 50%;
+	  left: .175rem;
+	  top: .175rem;
+	}
+  }
 }
 
 option {
