--- a/scss/styles_mobile.scss
+++ b/scss/styles_mobile.scss
@@ -76,6 +76,7 @@
 @import "components/forms";
 @import "components/buttons_links";
 @import "components/tables";
+@import "components/mobile";
 //
 @import "lib/animations";
 
