--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -49,7 +49,7 @@
 	td {
 	  &:first-child {
 		text-align: left;
-		padding: .15rem 2rem;
+		padding: .25rem .5rem;
 	  }
 	}
 
@@ -101,15 +101,14 @@
 	  table {
 		th,
 		td {
-		  padding: .15rem 2rem;
+		  padding: .25rem .5rem;
 		}
 	  }
 	}
 
 	table {
-	  width: 100%;
-	  max-width: 600px;
 	  margin: 0 auto;
+	  min-width: unset;
 
 	  tr {
 		th {
