--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -248,6 +248,7 @@
 	width: calc(100% - 4px);
 	position: absolute;
 	top: -32px;
+	left: 0;
 	padding: 8px 0;
 	font-size: 1rem;
 	font-weight: bold;
