--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -155,10 +155,9 @@
 }
 
 .progress_wrapper {
-  color: $color-primary !important;
-  background: rgba($color-secondary, .4) !important;
-  border: 1px solid rgba($color-primary, .5) !important;
-  box-shadow: inset 0 2px 4px 2px rgba(0, 0, 0, .4);
+  background: rgba($color-secondary, .4);
+  border: 1px solid rgba($color-primary, .5);
+  box-shadow: inset 0 2px 4px 2px rgba(black, .4), 0 1px 3px 3px rgba(black, .15);
   font-size: $text-small;
   height: 1.5rem;
   width: 100px;
@@ -168,12 +167,11 @@
 
   .progress_bar {
 	height: 1.5rem;
-	background: $color-progress-completed;
-	//background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
+	background: rgba($color-progress-completed, .6);
   }
 
   .progress_expected {
-	background: rgba(237, 255, 0, .4);
+	background: rgba($color-neutral, .2);
 	height: 100%;
 	margin-top: -1.5rem;
 	background-size: 100%;
