--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -55,227 +55,245 @@
   padding-left: .5rem;
 }
 
-.constructions {
-  display: flex;
-  flex-wrap: wrap;
-  border: none;
-  position: relative;
-  width: 90%;
-  max-width: 600px;
-  margin: 0 auto 3rem;
-  border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
-  border-image-slice: 1;
-  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 0 0 3px 3px rgba(0, 0, 0, 0.15);
-  background: $color-secondary;
-
-  &:first-of-type {
-	margin-top: 1rem;
-  }
-
-  .construction_info {
-	flex-basis: 100%;
+#constructions {
+  .maintext {
 	display: flex;
 	flex-wrap: wrap;
-	position: relative;
-	order: 1;
 
-	.title,
-	.description {
-	  flex-basis: 100%;
-	}
-
-	.description {
-	  padding: 1rem 2rem;
-
-	  a.desc_link {
-		top: -41px;
-		right: 50%;
-		transform: translate(50%, 100%);
-	  }
-	}
-
-	.title {
-	  background: $color-bg-th;
-	  margin-bottom: 0;
-	  padding: .5rem 2rem;
-	}
-
-	.resources {
-	  flex-basis: 33%;
-	  font-size: $text-small;
-	  position: absolute;
-	  right: 2rem;
-	  top: .9rem;
-
-	  + p {
-		width: 100%;
-		display: flex;
-		font-size: $text-small;
-		padding: 1rem 50% 1rem 2rem;
-		background: $color-secondary-alt;
-	  }
-	}
-
-	p {
-	  .time,
-	  .cu {
-		flex-basis: 50%;
-	  }
-
-	  .cu {
-		text-align: right;
-	  }
-	}
-
-	p,
-	.resources {
-	  padding-left: .5rem;
-	}
-  }
-
-  .construction_built {
-	padding: 0 2rem;
-	margin-top: -2.1rem;
-	font-size: 1rem;
-	width: 206px;
-	text-align: right;
-	z-index: 10;
-	order: 3;
-
-	.textvalue {
-	  font-weight: bold;
-	}
-
-	.progress_wrapper {
-	  margin: 1.8rem 0 1rem;
-
-	  + p {
-		font-size: $text-default;
-		line-height: $text-default;
-		text-align: left;
-		padding: 0 0 1rem;
-	  }
-	}
-
-	br {
-	  content: " ";
-	  margin-top: .5rem;
-	  display: block;
-	}
-  }
-
-  .construction_build {
-	display: flex;
-	align-items: flex-start;
-	flex-wrap: wrap;
-	width: calc(100% - 206px) !important;
-	order: 2;
-	padding-left: 2rem;
-
-	> * {
-	  &:first-child {
-		padding-top: .5rem !important;
-	  }
-	}
-
-	.resources {
-	  padding: .5rem 0;
-	  margin-bottom: 0;
-	  text-align: left;
+	> p {
 	  width: 100%;
-	  order: 1;
+	}
+
+	.constructions {
 	  display: flex;
 	  flex-wrap: wrap;
+	  border: none;
+	  position: relative;
+	  width: 90%;
+	  max-width: 600px;
+	  margin: 0 auto 3rem;
+	  border: 1px solid transparent;
+	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
+	  border-image-slice: 1;
+	  box-shadow: inset 0 0 8px 2px rgba(0, 0, 0, 0.25), 0 0 3px 3px rgba(0, 0, 0, 0.15);
+	  background: $color-secondary;
 
-	  &:nth-child(3) {
-		order: 3;
-		border-top: 1px solid rgba($color-primary, .5);
-		margin-top: .75rem;
-		padding-top: 1rem;
+	  &:first-of-type {
+		margin-top: 1rem;
 	  }
 
-	  li {
-		display: inline-block;
-		margin: 0 2rem 0 0;
-
-		&:nth-child(1) {
-		  width: 100%;
-		}
-	  }
-	}
-
-	form {
-	  width: 100%;
-	  display: flex;
-	  align-items: center;
-	  justify-content: flex-start;
-	  margin-bottom: .5rem;
-	  order: 2;
-
-	  &:nth-child(1) {
-		order: 4;
-	  }
-
-	  &:nth-child(4) {
-		order: 4;
-		margin-bottom: 1rem;
-	  }
-
-	  input {
-		&[type="checkbox"] {
-		  margin: 0 0 0 .5rem;
-		  width: 1.5rem;
-		  height: 1.5rem;
-
-		  &:focus {
-			border: 1px solid rgba($color-negative, .5);
-		  }
-
-		  &:before {
-			display: block;
-			content: '\2718';
-			font-weight: bold;
-			color: rgba($color-negative, .8);
-			font-size: 1.5rem;
-			position: absolute;
-			top: -0.3125rem;
-			left: 0.1875rem;
-		  }
-
-		  &:checked {
-			&:focus {
-			  border: 1px solid rgba($color-positive, .5);
-			}
-
-			&:before {
-			  content: '\2714';
-			  color: $color-positive;
-			  left: 0.0625rem;
-			}
-		  }
-		}
-
-		&[type="submit"] {
-		  min-width: 110px;
-		  margin: 0 0 .5rem !important;
-
-		  &:hover {
-			background: $color-negative;
-		  }
-
-		  &.con_btn {
-			margin: 0 !important;
-		  }
-		}
-	  }
-
-	  p {
-		text-align: left;
-		padding: 0;
+	  .construction_info {
+		flex-basis: 100%;
 		display: flex;
-		flex-direction: row-reverse;
-		align-items: center;
+		flex-wrap: wrap;
+		position: relative;
+		order: 1;
+
+		.title,
+		.description {
+		  flex-basis: 100%;
+		}
+
+		.description {
+		  padding: 1rem 2rem;
+
+		  a.desc_link {
+			top: -41px;
+			right: 50%;
+			transform: translate(50%, 100%);
+		  }
+		}
+
+		.title {
+		  background: $color-bg-th;
+		  margin-bottom: 0;
+		  padding: .5rem 2rem;
+		}
+
+		.resources {
+		  flex-basis: 33%;
+		  font-size: $text-small;
+		  position: absolute;
+		  right: 2rem;
+		  top: .9rem;
+
+		  + p {
+			width: 100%;
+			display: flex;
+			font-size: $text-small;
+			padding: 1rem 50% 1rem 2rem;
+			background: $color-secondary-alt;
+		  }
+		}
+
+		p {
+		  .time,
+		  .cu {
+			flex-basis: 50%;
+		  }
+
+		  .cu {
+			text-align: right;
+		  }
+		}
+
+		p,
+		.resources {
+		  padding-left: .5rem;
+		}
+	  }
+
+	  .construction_built {
+		padding: 0 2rem;
+		margin-top: -2.1rem;
+		font-size: 1rem;
+		width: 206px;
+		text-align: right;
+		z-index: 10;
+		order: 3;
+
+		.textlabel {
+		  text-transform: uppercase;
+		  font-size: $text-small;
+		}
+
+		.textvalue {
+		  font-weight: bold;
+		  color: $color-primary;
+		  font-size: $text-huge;
+		}
+
+		.progress_wrapper {
+		  margin: 1.8rem 0 1rem;
+
+		  + p {
+			font-size: $text-default;
+			line-height: $text-default;
+			text-align: left;
+			padding: 0 0 1rem;
+		  }
+		}
+
+		br {
+		  content: " ";
+		  margin-top: .5rem;
+		  display: block;
+		}
+	  }
+
+	  .construction_build {
+		display: flex;
+		align-items: flex-start;
+		flex-wrap: wrap;
+		width: calc(100% - 206px) !important;
+		order: 2;
+		padding-left: 2rem;
+
+		> * {
+		  &:first-child {
+			padding-top: .5rem !important;
+		  }
+		}
+
+		.resources {
+		  padding: .5rem 0;
+		  margin-bottom: 0;
+		  text-align: left;
+		  width: 100%;
+		  order: 1;
+		  display: flex;
+		  flex-wrap: wrap;
+
+		  &:nth-child(3) {
+			order: 3;
+			border-top: 1px solid rgba($color-primary, .5);
+			margin-top: .75rem;
+			padding-top: 1rem;
+		  }
+
+		  li {
+			display: inline-block;
+			margin: 0 2rem 0 0;
+
+			&:nth-child(1) {
+			  width: 100%;
+			}
+		  }
+		}
+
+		form {
+		  width: 100%;
+		  display: flex;
+		  align-items: center;
+		  justify-content: flex-start;
+		  margin-bottom: .5rem;
+		  order: 2;
+
+		  &:nth-child(1) {
+			order: 4;
+		  }
+
+		  &:nth-child(4) {
+			order: 4;
+			margin-bottom: 1rem;
+		  }
+
+		  input {
+			&[type="checkbox"] {
+			  margin: 0 0 0 .5rem;
+			  width: 1.5rem;
+			  height: 1.5rem;
+
+			  &:focus {
+				border: 1px solid rgba($color-negative, .5);
+			  }
+
+			  &:before {
+				display: block;
+				content: '\2718';
+				font-weight: bold;
+				color: rgba($color-negative, .8);
+				font-size: 1.5rem;
+				position: absolute;
+				top: -0.3125rem;
+				left: 0.1875rem;
+			  }
+
+			  &:checked {
+				&:focus {
+				  border: 1px solid rgba($color-positive, .5);
+				}
+
+				&:before {
+				  content: '\2714';
+				  color: $color-positive;
+				  left: 0.0625rem;
+				}
+			  }
+			}
+
+			&[type="submit"] {
+			  min-width: 110px;
+			  margin: 0 0 .5rem !important;
+
+			  &:hover {
+				background: $color-negative;
+			  }
+
+			  &.con_btn {
+				margin: 0 !important;
+			  }
+			}
+		  }
+
+		  p {
+			text-align: left;
+			padding: 0;
+			display: flex;
+			flex-direction: row-reverse;
+			align-items: center;
+		  }
+		}
 	  }
 	}
   }
@@ -559,6 +577,9 @@
 
   #tab1 {
 	.maintext {
+	  display: flex;
+	  flex-wrap: wrap;
+	  align-items: center;
 
 	  .scans {
 		display: flex;
